--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saktiporn/hello-crypto-wallet",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Generate wallet multi chain support chain [ETH,BNB,BINCOIN,XLM]",
   "main": "index.js",
   "scripts": {
@@ -14,8 +14,30 @@
   ],
   "author": "Saktiporn [suktipond.deemak@gmail.com]",
   "license": "MIT",
+  "repository": "https://github.com/saktiporn/hello-crypto-wallet",
   "dependencies": {
     "crypto": "^1.0.1",
-    "ethers": "^6.11.1"
+    "ethers": "^6.11.1",
+    "are-arrays": "^1.0.0",
+    "are-objects": "^1.0.0",
+    "axios": "^0.24.0",
+    "express": "^4.17.1",
+    "moment": "^2.29.1",
+    "request": "^2.88.2",
+    "bcrypt": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.2",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "socket.io": "^4.3.2",
+    "joi": "^17.4.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.2.0",
+    "jest": "^27.4.7",
+    "nodemon": "^2.0.15",
+    "chai": "^4.3.4",
+    "sinon": "^13.0.0"
   }
 }
