--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "MIT", 
   "repository": {
     "type": "git",
-    "url": "https://github.com/saktiporn/hello-crypto-wallet/.git"
+    "url": "https://github.com/saktiporn/hello-crypto-wallet"
   },
   "dependencies": {
     "crypto": "^1.0.1",
